--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^6.20.0",
+    "mongoose": "^8.19.2",
     "nodemon": "^1.19.1"
   }
 }
