--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha --watch \"./{,!(node_modules)/**/}*.test.js\""
+    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\"",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test"
   },
   "dependencies": {
     "chai": "^6.2.0",
@@ -14,6 +15,7 @@
     "mocha": "^11.7.4",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "onchange": "^7.1.0"
   }
 }
